--- a/appsettings.json
+++ b/appsettings.json
@@ -5,9 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*" ,
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server:.;DataBase=dotnet;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "server=.;DataBase=dotnet;Trusted_Connection=True;TrustServerCertificate=True"
   }
-  
 }
